--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <script src="script.js"></script>
     <!-- <script src="test.js"></script> -->
+    <!--      Netlify : https://friendly-rosalind-d166a4.netlify.app/  -->
 </body>
 
 </html>
